src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_literals_tests__literal_oct_number_with_double_underscores.snap
---
source: src/parser/tests/parse_errors/parse_error_literals_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected KeywordSemicolon but found '__7'
  ┌─ <internal>:1:16
  │
1 │ PROGRAM exp 8#7__7; END_PROGRAM
  │                ^^^ Unexpected token: expected KeywordSemicolon but found '__7'
